--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                     <li class="nav-item">
                         <!-- !important is used to override the default colour -->
                         <!-- (current page) will show next to the active page name for screen readers only -->
-                        <a class="nav-link font-navigation" href="index.html" style="color: orange !important;"><i
+                        <a class="nav-link font-navigation" href="index.html"><i
                                 class="fas fa-home space"></i> Home Page</a>
                     </li>
                     <li class="nav-item">
@@ -70,29 +70,41 @@
                 </div>
             </div>
             <!-- navigation bar starts here for all sizes except XS, which is hidden -->
-            <div class="row navigation font-white font-navigation d-none d-sm-block center">
+            <div class="row navigation font-white font-navigation d-none d-sm-block">
                 <!-- black space on left of navigation bar which hides when the screen gets smaller -->
-                <div class="col-lg-2 d-none d-lg-block bg-black">
-                </div>
-                <!-- navigation buttons with font-awesome icons, reduces from horizontal to vertical alignment when screen gets smaller -->
-                <!-- each hyperlink has a hover-effect through the main css stylesheet, that will glow orange when hovered over -->
-                <!-- the class "active" is used on the active pages, that will keep the icon orange so the user knows which page they are on -->
-                <a href="index.html" class="col-lg-2 col-md-3 col-sm-6 col-12 bg-black hover-glow">
-                    <i class="fas fa-home space"></i> Home Page
-                </a>
-                <a href="music.html" class="col-lg-2 col-md-3 col-sm-6 col-12 bg-black hover-glow">
-                    <i class="fas fa-music space"></i> Music + Videos
-                </a>
-                <!-- external hyperlink that will open the official booking page, in a new tab -->
-                <a href="https://www.ticketmaster.co.uk/ed-sheeran-tickets/artist/1560779" target="_blank"
-                    class="col-lg-2 col-md-3 col-sm-6 col-12 bg-black hover-glow">
-                    <i class="fas fa-ticket-alt space"></i> Book Tickets
-                </a>
-                <a href="contact.html" class="col-lg-2 col-md-3 col-sm-6 col-12 bg-black hover-glow active">
-                    <i class="fas fa-comments space"></i> Contact Us
-                </a>
-                <!-- black space on right of navigation bar which hides when the screen gets smaller -->
-                <div class="col-md-2 d-none d-lrg-block bg-black">
+                <div class="col-sm-12 bg-black">
+                    <div class="row">
+                        <div class="col-lg-2 d-none d-lg-block bg-black">
+                        </div>
+                        <!-- navigation buttons with font-awesome icons, reduces from horizontal to vertical alignment when screen gets smaller -->
+                        <!-- each hyperlink has a hover-effect through the main css stylesheet, that will glow orange when hovered over -->
+                        <!-- the class "active" is used on the active pages, that will keep the icon orange so the user knows which page they are on -->
+                        <div class="col-lg-2 col-md-3 col-sm-6">
+                            <a href="index.html" class="hover-glow">
+                                <i class="fas fa-home space"></i> Home Page
+                            </a>
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-sm-6">
+                            <a href="music.html" class="hover-glow">
+                                <i class="fas fa-music space"></i> Music + Videos
+                            </a>
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-sm-6">
+                            <!-- external hyperlink that will open the official booking page, in a new tab -->
+                            <a href="https://www.ticketmaster.co.uk/ed-sheeran-tickets/artist/1560779" target="_blank"
+                                class="hover-glow">
+                                <i class="fas fa-ticket-alt space"></i> Book Tickets
+                            </a>
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-sm-6">
+                            <a href="contact.html" class="hover-glow active">
+                                <i class="fas fa-comments space"></i> Contact Us
+                            </a>
+                        </div>
+                        <!-- black space on right of navigation bar which hides when the screen gets smaller -->
+                        <div class="col-lg-2 d-none d-lg-block bg-black">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
